# RAG-Project-backend

./: .gitignore  README.md  ask.py  createEmbeddings.py  create_embeddings.py  database.py  db.py  embeddings.py  fill_db.py  main.py  mongo_db.py  pyproject.toml  queries for testing.txt  rag_agent.py  rag_search.py  requirements.txt  vectorstore_manager.py
