[project]
name = "rag-project-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.41.5",
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "langchain-experimental>=0.4.0",
    "langchain-openai>=1.1.0",
    "llama-index>=0.14.8",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
    "pymilvus>=2.6.4",
    "pymongo>=4.15.4",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
